<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.ContactFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/aboutUsLabel4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/contact_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enas"
            android:layout_width="223dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/enas"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutUsLabel4" />

        <TextView
            android:id="@+id/ebrahim"

            android:layout_width="223dp"
            android:layout_height="24dp"

            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/ebrahim"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enas" />

        <TextView
            android:id="@+id/rania"

            android:layout_width="223dp"
            android:layout_height="24dp"

            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/rania"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ebrahim" />

        <TextView
            android:id="@+id/nourhan"

            android:layout_width="223dp"
            android:layout_height="24dp"

            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/nourhan"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rania" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>