<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login_register.register.RegisterFragment" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="371dp"
        android:layout_height="723dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topguid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".08" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/App_name"
                android:textColor="@color/black"
                android:textSize="40dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topguid" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/centerguid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".27" />

            <LinearLayout
                android:id="@+id/ll_taps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/centerguid">

                <TextView
                    android:id="@+id/tv_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/cardview_dark_background"
                app:boxStrokeColor="@color/cardview_dark_background"
                app:hintTextColor="@color/cardview_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_taps"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/name_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/full_name"
                    android:textColorHint="#FF757777"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/cardview_dark_background"
                app:boxStrokeColor="@color/cardview_dark_background"
                app:hintTextColor="@color/cardview_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_nameField"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/email_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/email"
                    android:textColorHint="#FF757777"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tv_passField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/cardview_dark_background"
                app:boxStrokeColor="#FF757777"
                app:hintTextColor="@color/cardview_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_emailField"
                app:passwordToggleEnabled="true"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/password_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="#FF757777"
                    android:textCursorDrawable="@drawable/cursor_color" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="tv_pass,tv_pass2,tv_pass3"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="10dp" />

            <TextView
                android:id="@+id/tv_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/_8_characters_minimum"
                android:textColor="@color/black"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ll_taps"
                app:layout_constraintTop_toBottomOf="@+id/tv_passField" />

            <TextView
                android:id="@+id/tv_pass2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/at_least_one_letter"
                android:textColor="@color/black"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ll_taps"
                app:layout_constraintTop_toBottomOf="@+id/tv_pass" />

            <TextView
                android:id="@+id/tv_pass3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/at_least_one_number"
                android:textColor="@color/black"
                android:textSize="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/ll_taps"
                app:layout_constraintTop_toBottomOf="@+id/tv_pass2" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pass2" />

            <TextView
                android:id="@+id/tv_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/or_join_with"
                android:textColor="#FF757777"
                android:textColorHint="#FF757777"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_btn" />

            <ImageButton
                android:id="@+id/google_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_google"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_join" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>